<resources>
    <string name="app_name">Maluach</string>
    <string name="psalms">Psalms</string>
    <string name="date_type_greg">Gregorian</string>
    <string name="date_type_heb">Hebrew</string>
    <string name="alignment_right">Right</string>
    <string name="alignment_left">Left</string>
    <string name="right_aligned">Right To Left</string>
    <string name="gregorian_display">Gregorian oriented</string>
    <string name="today">Today</string>
    <string name="week_day_full_sun">Sunday</string>
    <string name="week_day_full_mon">Monday</string>
    <string name="week_day_full_tue">Tuesday</string>
    <string name="week_day_full_wed">Wednesday</string>
    <string name="week_day_full_thu">Thursday</string>
    <string name="week_day_full_fri">Friday</string>
    <string name="week_day_full_sat">Saturday</string>
    <string name="week_day_short_sun">Sun</string>
    <string name="week_day_short_mon">Mon</string>
    <string name="week_day_short_tue">Tue</string>
    <string name="week_day_short_wed">Wed</string>
    <string name="week_day_short_thu">Thu</string>
    <string name="week_day_short_fri">Fri</string>
    <string name="week_day_short_sat">Sat</string>

    <string name="month_greg_full_jan">January</string>
    <string name="month_greg_full_feb">February</string>
    <string name="month_greg_full_mar">March</string>
    <string name="month_greg_full_apr">April</string>
    <string name="month_greg_full_may">May</string>
    <string name="month_greg_full_jun">June</string>
    <string name="month_greg_full_jul">July</string>
    <string name="month_greg_full_aug">August</string>
    <string name="month_greg_full_sep">September</string>
    <string name="month_greg_full_oct">October</string>
    <string name="month_greg_full_nov">November</string>
    <string name="month_greg_full_dec">December</string>

    <string name="btn_prev_character">◄</string>
    <string name="ydate_lang">en</string>
    <string name="btn_next_character">►</string>
    <string name="close">close</string>
    <string name="choose">choose</string>
    <string name="compass">Compass</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
