<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="besiyata.maluach.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Switch
            android:id="@+id/switchHebGreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/date_type_greg"
            android:textOn="@string/date_type_heb"
            android:checked="true"/>
        <Switch
            android:id="@+id/switchRTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/alignment_left"
            android:textOn="@string/alignment_right"
            android:checked="true"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="@integer/btn_direction"
        android:orientation="horizontal">
        <Button
            android:id="@+id/prevYearBtn"
            android:layout_width="30sp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            android:onClick="previousYearClick"
            android:text="@string/btn_prev_character"
            android:textSize="18sp" />
        <Button
            android:id="@+id/nextYearBtn"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            android:textSize="18sp" />


        <Button
            android:id="@+id/prevMonthBtn"
            android:layout_width="30sp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            android:onClick="previousMonthClick"
            android:text="@string/btn_prev_character"
            android:textSize="18sp" />
        <Button
            android:id="@+id/nextMonthBtn"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            android:textSize="18sp" />
        <Button
            android:id="@+id/jumpToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            android:onClick="jumpToToday"
            android:text="@string/today"
             />




    </LinearLayout>
    <!--<TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />-->



    <besiyata.maluach.YDateView
        android:id="@+id/ydateView"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:rightToLeft="true"
        app:hebrewMonth="true"
        app:selectionColor="#33b5e5"
        app:backgroundColor="#33b5e5"
        app:frameColor="#33b5e5" />

    <TextView
        android:id="@+id/textViewHeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGreg"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewEvent"
        android:textSize="20sp" />


</LinearLayout>
